qp-member/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qp-member-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: member.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: qp-member
          servicePort: 8090
